--- a/client/package.json
+++ b/client/package.json
@@ -7,12 +7,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
-    "jsmpeg": "^1.0.0",
+
+
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+
     "react-icons": "^5.3.0",
     "react-rnd": "^10.4.13",
     "react-scripts": "5.0.1",
+    "video.js": "^8.17.4",
+    "videojs-contrib-hls": "^5.15.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
